// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MastheadSearchForm invalid id at the end of the url 1`] = `
.emotion-0 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  color: #777777;
}

.emotion-0:hover,
.emotion-0:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-0:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-0[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-0:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:disabled,
.emotion-0:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-0:focus {
  outline-width: medium;
}

<form
  className="css-kkjrjy"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value="https://ndla-frontend.test.api.ndla.no/article/urn:subject:100/urn:topic:1:179373/urn:resource:1:16838"
  />
  <button
    className="emotion-0 emotion-1"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla node id pasted 1`] = `
.emotion-0 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  color: #777777;
}

.emotion-0:hover,
.emotion-0:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-0:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-0[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-0:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:disabled,
.emotion-0:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-0:focus {
  outline-width: medium;
}

<form
  className="css-kkjrjy"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value="#4737"
  />
  <button
    className="emotion-0 emotion-1"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla url paste with id at the end 1`] = `
.emotion-0 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  color: #777777;
}

.emotion-0:hover,
.emotion-0:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-0:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-0[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-0:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:disabled,
.emotion-0:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-0:focus {
  outline-width: medium;
}

<form
  className="css-kkjrjy"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="emotion-0 emotion-1"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla url paste with taxonomy id at the end 1`] = `
.emotion-0 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  color: #777777;
}

.emotion-0:hover,
.emotion-0:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-0:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-0[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-0:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:disabled,
.emotion-0:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-0:focus {
  outline-width: medium;
}

<form
  className="css-kkjrjy"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="emotion-0 emotion-1"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on old ndla url paste with new id 1`] = `
.emotion-0 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  color: #777777;
}

.emotion-0:hover,
.emotion-0:focus {
  color: white;
  background-color: #184673;
  border: 2px solid rgba(32,88,143,0);
  -webkit-transform: translateY(1px) translateX(1px);
  -ms-transform: translateY(1px) translateX(1px);
  transform: translateY(1px) translateX(1px);
}

.emotion-0:active {
  -webkit-transform: translateY(2px) translateX(2px);
  -ms-transform: translateY(2px) translateX(2px);
  transform: translateY(2px) translateX(2px);
}

.emotion-0[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
  -webkit-transform: translateY(0) translateX(0);
  -ms-transform: translateY(0) translateX(0);
  transform: translateY(0) translateX(0);
}

.emotion-0:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:disabled,
.emotion-0:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  border: none;
}

.emotion-0:focus {
  outline-width: medium;
}

<form
  className="css-kkjrjy"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="emotion-0 emotion-1"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;
